<resources>
    <string name="app_name">CourseKai</string>

    <string name="intro_description_bold">Хочешь получить востребованную профессию?</string>
    <string name="intro_btn_registr">Записаться</string>
    <string name="intro_description_item">Перенимай опыт самых успешных и высокооплачиваемых специалистов!</string>
    <string name="intro_securite_text">Нажимая на кнопку \"Записаться\" вы соглашаетесь с политикой конфиденциальности.</string>
    <string name="intro_btn_login">Войти</string>
    <string name="login_logo_tv">BrainsTrainCode</string>
    <string name="login_email">Введите Email</string>
    <string name="login_password">Введите пароль</string>
    <string name="menu_toolbar_profile_edit_data">Edit data</string>
    <string name="menu_toolbar_profile_settings">Settings</string>
</resources>